--- a/privacy/index.html
+++ b/privacy/index.html
@@ -238,7 +238,9 @@
 					'phone': '',
 					'url': 'https://vsekredity-rostov.ru/privacy/',
 					'city': 'Ростов-на-Дону',
-					'utm_source': "Все Кредиты Ростов-на-Дону"
+					'utm_source': "Все Кредиты Ростов-на-Дону",
+					'source_id': "631",
+					'broker_id': "17"
 				},
 				
 
