deploy: 309a96b1e064f506ff60a243bc1d01cc0827b70b

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -153,7 +153,10 @@
 <p>Наш <a href="https://wa.me/79613134856">WhatsApp</a></p>
 </li>
 <li>
-<p>Наш адрес <a href=""></a></p>
+<p>Наши адреса:</p>
+<ul>
+<li><a href="https://2gis.ru/rostov/firm/70000001045601417?m=39.700674%2C47.217225%2F16.52">г. Ростов-на-Дону, ул. Социалистическая, д.18/25, офис 11, 1 этаж.</a></li>
+</ul>
 </li>
 </ul>
 
