deploy: be6d91ad787c930b89532bcfb0f32614732a3548

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,8 +1,9 @@
 
 	
-	
-	
-	
+		
+		
+		
+		
 	
 
 <!DOCTYPE html>
@@ -258,7 +259,7 @@
 				this.loading = true;
 				this.message = ''
 
-				fetch('https://credeo.ru/v1/lead/new-guest', {
+				fetch('https://partner.credeo.ru/v1/lead/new-guest', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json'
@@ -300,3 +301,5 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/86852439" style="position:absolute; left:-9999px;" alt="YM" /></div></noscript>
 </body>
 </html>
+
+
